force-app/main/default/objects/ScrapSlotReserve__c/ScrapSlotReserve__c.object-meta.xml
<CustomObject>
    <label>Слоти резервування брухту</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>External Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Слоти резервування брухту</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>