force-app/main/default/objects/ScrapSlotReserve__c/fields/BaseDoc__c.field-meta.xml
<CustomField>
    <fullName>BaseDoc__c</fullName>
    <formula>IF(NOT(ISBLANK(Contract__r.Name)),
&apos;Угода № &apos; + Contract__r.Name + 
&apos; від &apos; + LPAD(TEXT(DAY(Contract__r.StartDate)), 2, &apos;0&apos;) + 
&apos;.&apos; + LPAD(TEXT(MONTH(Contract__r.StartDate)), 2, &apos;0&apos;) + 
&apos;.&apos; + TEXT(YEAR(Contract__r.StartDate)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Підстава</label>
    <type>Text</type>
</CustomField>