force-app/main/default/objects/ScrapSlotReserve__c/fields/DateLookup__c.field-meta.xml
<CustomField>
    <fullName>DateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DateLookup</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapSlotReserve_DateLookup</relationshipName>
    <type>Lookup</type>
</CustomField>