force-app/main/default/objects/ScrapSlotReserve__c/fields/DecadeLookup__c.field-meta.xml
<CustomField>
    <fullName>DecadeLookup__c</fullName>
    <label>Декада</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapSlotReserve1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>