force-app/main/default/objects/ScrapSlotReserve__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Водій</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.TrackDriver__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>