force-app/main/default/objects/ScrapSlotReserve__c/fields/DriverFIO__c.field-meta.xml
<CustomField>
    <fullName>DriverFIO__c</fullName>
    <formula>Driver__r.LastName + &apos; &apos; + LEFT(Driver__r.FirstName,1) + &apos;.&apos; + LEFT(Driver__r.MiddleName,1) + &apos;.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Водій (П.І.Б.)</label>
    <type>Text</type>
</CustomField>