force-app/main/default/objects/ScrapSlotReserve__c/fields/FixedWeight__c.field-meta.xml
<CustomField>
    <fullName>FixedWeight__c</fullName>
    <label>Норматив, т.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>