force-app/main/default/objects/ScrapSlotReserve__c/fields/IsCancelled__c.field-meta.xml
<CustomField>
    <fullName>IsCancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCancelled</label>
    <type>Checkbox</type>
</CustomField>