force-app/main/default/objects/ScrapSlotReserve__c/fields/IsOutOfLimit__c.field-meta.xml
<CustomField>
    <fullName>IsOutOfLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Поза лімітом</label>
    <type>Checkbox</type>
</CustomField>