force-app/main/default/objects/ScrapSlotReserve__c/fields/MonthLookup__c.field-meta.xml
<CustomField>
    <fullName>MonthLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Місяць</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapSlotReserve2</relationshipName>
    <type>Lookup</type>
</CustomField>