force-app/main/default/objects/ScrapSlotReserve__c/fields/PassID__c.field-meta.xml
<CustomField>
    <fullName>PassID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>PassID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>