force-app/main/default/objects/ScrapSlotReserve__c/fields/PassNumber__c.field-meta.xml
<CustomField>
    <fullName>PassNumber__c</fullName>
    <label>PassNumber</label>
    <length>80</length>
    <type>Text</type>
</CustomField>