force-app/main/default/objects/ScrapSlotReserve__c/fields/ReserveDate__c.field-meta.xml
<CustomField>
    <fullName>ReserveDate__c</fullName>
    <label>Дата</label>
    <type>Date</type>
</CustomField>