force-app/main/default/objects/ScrapSlotReserve__c/fields/ScrapTrucksDrivers__c.field-meta.xml
<CustomField>
    <fullName>ScrapTrucksDrivers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScrapTrucksDrivers</label>
    <referenceTo>ScrapTrucksDrivers__c</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>