force-app/main/default/objects/ScrapSlotReserve__c/fields/ScrapType__c.field-meta.xml
<CustomField>
    <fullName>ScrapType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Вид брухту</label>
    <referenceTo>ScrapType__c</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>