force-app/main/default/objects/ScrapSlotReserve__c/fields/ShippingPoint__c.field-meta.xml
<CustomField>
    <fullName>ShippingPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Адреса відвантаження</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ScrapSupplierShippingPoint__c.Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ScrapSupplierShippingPoint__c</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>