force-app/main/default/objects/ScrapSlotReserve__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <label>Заявлено</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Підтверджено</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Завершено</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Скасовано</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>