force-app/main/default/objects/ScrapSlotReserve__c/fields/SupplierPerson__c.field-meta.xml
<CustomField>
    <fullName>SupplierPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Менеджер постачальника</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.TrackDriver__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ScrapSlotReserve1</relationshipName>
    <type>Lookup</type>
</CustomField>