force-app/main/default/objects/ScrapSlotReserve__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <formula>IF(
  OR( ISBLANK(Weight__c), Weight__c = 0 ),
  CASE(
    TEXT(FixedWeight__c),
    &quot;10&quot;, 10,
    &quot;20&quot;, 20,
    &quot;25&quot;, 25,
    NULL
  ),
  Weight__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Тоннаж</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>