force-app/main/default/objects/ScrapSlotReserve__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <formula>IF(
 			NOT(ISBLANK(Trailer__c)), 
				Truck__r.TruckModel__c +&apos; №&apos; + Truck__r.Name + &apos;, причеп &apos; + Trailer__r.Name,
				Truck__r.TruckModel__c +&apos; №&apos; + Truck__r.Name				
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Траспорт</label>
    <type>Text</type>
</CustomField>