force-app/main/default/objects/ScrapSlotReserve__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Автомобіль</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ScrapTruck__c.TruckType__c</field>
            <operation>equals</operation>
            <value>Тягач</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>