force-app/main/default/objects/ScrapSlotReserve__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Фактично, т.</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>