force-app/main/default/objects/ScrapSlotReserve__c/fields/YearLookup__c.field-meta.xml
<CustomField>
    <fullName>YearLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>YearLookup</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapSlotReserve</relationshipName>
    <type>Lookup</type>
</CustomField>